# CheMLFlow

./: .gitignore  A-NVAR_doe-7668744.out  A-NVAR_doe-7681916.out  A-NVAR_doe-7876281.err  CONTACT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  analysis.py  chemlflow_adaptive_nvar_review_patch.diff  chemlflow_add_test_num_runs_25.patch  chemlflow_anvar_fixes.patch  clean.py  erichybrid.sb  hybrid.sb  main.py  main_qm9.py  requirements.txt  setup.cfg  submit_gpu.sb  termina.sh
A-NVAR_doe/: case_0001__ts_forecast__dl_adaptive_nvar__nosplit__na.yaml  case_0002__ts_forecast__dl_adaptive_nvar__nosplit__na.yaml  doe_spec.input.yaml  manifest.jsonl  parent_manifest.jsonl  summary.json
DLModels/: adaptive_nvar.py  aeregressor.py  deepregressionnn.py  gruregressor.py  resmlp.py  simplenn.py  simpleregressionnn.py  tabtransformer.py  tropicallayer.py
GenDescriptors/: Morgan_fingerprints.py  RDKit_descriptors.py  RDKit_descriptors_labeled.py
GetData/: data_sources.py  get_ChEMBL_target_full.py  get_data.py
MLModels/: DLModels.py  Lazy_predictor.py  data_preprocessing.py  train_models.py
config/: config.ara.yaml  config.chembl.yaml  config.flash.yaml  config.pah.yaml  config.pgp.yaml  config.pgp_chemprop.yaml  config.pgp_tdc_benchmark.yaml  config.qm9.yaml  config.ysi.yaml  doe.example.yaml
contracts/: __init__.py  models.py  validate.py
docs/: agent-skills-quickstart.md  config-options.md  dataset_node_support_matrix.html  dataset_node_support_matrix.md  dataset_profile_support_matrix.html  dataset_profile_support_matrix.md  doe.md  generate_support_table.py  (+4 more)
(+523 files in other folders)
