[metadata]
name = CheMLFlow
version = 0.1.0
author = Nijamudheen Abdulrahiman
author_email = apchnijam@gmail.com
description = An open source software development platform of cheminformatics workflows to train and apply ML/AI and statistical models
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nijamudheen/CheMLFlow
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.12
install_requires =
    numpy>=1.26,<2
    pandas>=2.2.3
    scipy>=1.15.2
    scikit-learn>=1.6.1
    matplotlib>=3.10.1
    seaborn>=0.13.2
    chembl-webresource-client>=0.10.9
    easydict>=1.13
    Pillow>=11.2.1
    lazypredict>=0.2.16
    click>=8.1.8
    lightgbm>=4.6.0
    tqdm>=4.67.1
    xgboost>=3.0.0
    shap>=0.47.2
    catboost>=1.2.7
    pydantic>=2.9.0
    pydantic-core>=2.12.5
    annotated-types>=0.6.0
    typing-inspection>=0.4.2
    PyYAML>=6.0.1

[options.extras_require]
dev =
    pytest
    black
    flake8
chemprop =
    chemprop

[options.package_data]
* = *.txt, *.md
